feat: add comparison fish api
